<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>api</module>
        <module>auth</module>
        <module>common</module>
        <module>course</module>
        <module>message</module>
        <module>model</module>
        <module>processor</module>
        <module>system</module>
        <module>storage</module>
        <module>user</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.1.RELEASE</version>
        <relativePath/>
    </parent>
    <groupId>xo.fredtan.lottolearn</groupId>
    <artifactId>lottolearn-service</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>lottolearn-service</name>
    <description>A simple online course platform.</description>

    <properties>
        <java.version>14</java.version>
        <dubbo-spring-boot.version>2.7.7</dubbo-spring-boot.version>
        <dubbo-registry-nacos.version>2.7.7</dubbo-registry-nacos.version>
        <druid-spring-boot.version>1.1.22</druid-spring-boot.version>
        <mybatis-spring-boot.version>2.1.3</mybatis-spring-boot.version>
        <pagehelper.version>1.2.13</pagehelper.version>
        <fastdfs-client.version>1.27.2</fastdfs-client.version>
        <fastjson.version>1.2.72</fastjson.version>
        <swagger.version>3.0.0</swagger.version>
        <commons-io.version>2.7</commons-io.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Microservice -->
            <dependency>
                <groupId>org.apache.dubbo</groupId>
                <artifactId>dubbo-spring-boot-starter</artifactId>
                <version>${dubbo-spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.dubbo</groupId>
                <artifactId>dubbo-registry-nacos</artifactId>
                <version>${dubbo-registry-nacos.version}</version>
            </dependency>

            <!-- Database access -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid-spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis-spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper.version}</version>
            </dependency>

            <!-- Tools -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-boot-starter</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
